Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35969

qmlRegisterType() is described in QQmlEngine, but including <QQmlEngine> won't declare this function

    XMLWordPrintable

Details

    Description

      #include <QQmlEngine>
      
      ...
      
      qmlRegisterType<Lolo>("com.prog", 1, 0, "Lolo");
      

      Compile error:

      main.cpp:10: error: 'qmlRegisterType' was not declared in this scope

      We need to include <QtQml> right now to workaround this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            dmitry64 Dmitry
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes