Fix building with older Qt

Though qmlRegisterType() is documented in QQmlEngine page which implies #include <QtQml/QQmlEngine>, older Qt versions did not include QtQml from QQmlEngine. See also https://bugreports.qt.io/browse/QTBUG-35969